# jusha

./: .gitignore  CMakeLists.txt  README.md
book/: .latex.yml  barrier.tex  d2d_kernel.tex  mysetting.tex  overview.tex  reference.bib  utility.tex  xelatex_main.tex
book/code/: CMakelists.txt  event_api.cpp  event_example.cpp
book/scripts/: gen.sh  template.py
book/scripts/d2d_kernel/: cumemcpy_to_direct.py  cumemcpy_to_direct_offset1.py  run_all.sh
book/scripts/jusha/: io.py
src/: allocator.h  jusha_config.h.in.cmake  timer.cpp  timer.h  typedef.h  utility.cpp  utility.h
src/cuda/: ForEachShMemKernel.h  ForEachShmKernel.hpp  Operator.h  allocator.h  array.cu  array.h  array_util.h  bitmap_scan.cu  bitmap_scan.h  cuda_config.cpp  cuda_config.h  cuda_intrinsic.hpp  cuda_sort.hpp  cuda_types.h  d2d_copy.cu  d2d_copy.h  dummy.cu  external_lib_wrapper.h  for_each.hpp  gpu_device_manager.h  gpu_device_mem_manager.h  heap_allocator.cpp  heap_allocator.cu  heap_allocator.h  heap_manager.cpp  heap_manager.h  intrinsic.hpp  kernel.cpp  kernel.hpp  policy.hpp  primitive.h  reduce.cu  scan_primitive.h  scan_primivite.h  utility.cu  utility.h
src/cuda/device/: global_barrier.cuh  partition.cuh  reduce.cuh  scan.cuh
src/cuda/test/: util.h
src/lib/1.7/: README
src/lib/catch/: catch.hpp
src/lib/iml/testing/: tbicg.cc  tbicgsta.cc  tcg.cc  tcgs.cc  tcheby.cc  tgmres.cc  ticcg.cc  tilugmre.cc  tqmr.cc
src/sparse/: csr_matrix.cpp  csr_matrix.cu  csr_matrix.h  csr_util.hpp  distri_obj.cpp  distri_obj.h  matrix.h  matrix_reader.cpp  matrix_reader.h  mesh.cu  mesh.h  mmio.cpp  mmio.h
src/sparse/generate/: pure_diffusion.cpp  pure_diffusion.h
src/sparse/parser/: su2_mesh_parser.cpp  su2_mesh_parser.h  su2_parser.cpp  su2_parser.h
src/sparse/solver/: diag_precond.cpp  jacobi_precond.cpp  precond.h  precond_template.h
src/sparse/view/: 2d_viewer.cu  2d_viewer.h  opengl_helper.cpp  opengl_helper.h
src/x86/: exclusive_scan_c.h  scan.h
src/x86/detail/: exclusive_scan_v0.h  exclusive_scan_v1.h  exclusive_scan_v2.h
tests/: CMakeLists.txt
tests/src/: allocator_test.cpp  allocator_test.cu  cudamemcpy.cu  d2d_direct.cu  d2d_first_approach.cu  d2d_prefetch.cu  d2d_texture.cu  d2d_unroll.cu  distri_obj_test.cpp  foreach_block_test.cu  foreach_shm_test.cu  foreach_test.cu  intrinsic_test.cu  test_array.cu  test_csr_matrix.cpp  test_d2d.cu  test_data.cpp  test_data.h  test_distri_obj.cpp  test_matrix_reader.cpp  test_primitive_scan.cu  test_scan.cu  test_su2parser.cpp  test_viewer.cpp  unit_test.cpp
